[package]
name = "alpha_bleeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
image = "0.24.7"
spade = "2.2.0"

[build-dependencies]
winres = "0.1.12"
